[project]
name = "oauth2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.5",
    "flask>=3.1.2",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.43",
    "requests>=2.32.3",
    "opencv-python>=4.12.0.88",
]
