[project]
name = "oauth2"
version = "0.1.0"
description = "Self-hosted OAuth 2.0 / OIDC Authorization Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.5",
    "flask>=3.1.2",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.43",
    "requests>=2.32.3",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
]
